Fixed squishing of avatar image

--- a/telehance-dashboard/src/main/Pages/AppointmentDashboard/AppointmentDashboard.module.css
+++ b/telehance-dashboard/src/main/Pages/AppointmentDashboard/AppointmentDashboard.module.css
@@ -55,6 +55,10 @@ th > div > div > span {
   display: inline-block;
 }
 
+.avatar img {
+  object-fit: cover;
+}
+
 .name {
   word-wrap: break-word;
 }
