--- a/telehance-dashboard/src/main/Pages/ConsultDashboard/ConsultDashboard.module.css
+++ b/telehance-dashboard/src/main/Pages/ConsultDashboard/ConsultDashboard.module.css
@@ -50,6 +50,10 @@
   display: inline-block;
 }
 
+.avatar img {
+  object-fit: cover;
+}
+
 .view-container {
   display: flex;
   justify-content: center;
